documenting proxy woes

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -3,7 +3,7 @@ run_as shiny;
 
 # Define a top-level server which will listen on a port
 server {
-  # Instruct this server to listen on port 3838
+  # Instruct this server to listen on port 8080
   listen 8080;
 
   # Define the location available at the base URL
@@ -15,6 +15,11 @@ server {
     
     # Define where we should put the log files for this location
     log_dir /var/log/shiny-server;
+
+    # as it spawsn a new instance each time no worries about log rotation(?) 
+    preserve_logs true
+
+    google_analytics_id UA-54019251-3
     
     # Should we list the contents of a (non-Shiny-App) directory when the user 
     # visits the corresponding URL?
