update to get it to deploy

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -16,10 +16,9 @@ server {
     # Define where we should put the log files for this location
     log_dir /var/log/shiny-server;
 
-    # as it spawsn a new instance each time no worries about log rotation(?) 
-    preserve_logs true
-
-    google_analytics_id UA-54019251-3
+    # as it spawns a new instance each time no worries about log rotation(?) 
+    # can't use on appengine
+    # preserve_logs true
     
     # Should we list the contents of a (non-Shiny-App) directory when the user 
     # visits the corresponding URL?
